# aoc2022

./: .gitignore  Cargo.toml
day01/src/: main.rs
day02/src/: main.rs
day03/src/: main.rs
day04/src/: main.rs
