[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
anyhow = { version="1.0.66", features=["backtrace"] }
ndarray = "0.15.6"
nom = "7.1.1"
regex = "1.7.0"
lazy_static = "1.4.0"

[dev-dependencies]
rstest = "0.16.0"